# logavista

./: CMakeLists.txt  Changelog  README.md  build-package.sh  logavista_0.9-1_amd64.deb  logavista_0.9-1_amd64.deb.checksums  logavista_0.9-2_amd64.deb
.github/ISSUE_TEMPLATE/: feature_request.md
logavista_0.9-1_amd64/usr/share/kxmlgui5/logavista/: logavistaui.rc
logavista_0.9-2_amd64/debian/: control
logavista_0.9-2_amd64/usr/share/applications/: logavista.desktop
src/: CMakeLists.txt  Readme.md  Readme.md~  addItemStringList  configurationDialog.cpp  detailDialog.cpp  generalConfigurationWidget.cpp  generalConfigurationWidgetBase.ui  iconlist.txt  logModePluginsLoader.cpp  logavista.desktop  loggerDialog.cpp  main.cpp  mainWindow.cpp  setdata  statusBar.cpp  tabLogViewsWidget.cpp
src/config/: ksystemlog.kcfg
src/lib/: analyzer.cpp  analyzer.h  defaults.h  fileAnalyzer.cpp  fileAnalyzer.h  globals.cpp  globals.h  logLine.h  logManager.cpp  logMode.cpp  logMode.h  logModeAction.h  logModeConfiguration.cpp  logModeConfigurationWidget.cpp  logModeConfigurationWidget.h  logViewFilterWidget.cpp  logViewSearchWidget.cpp  processOutputLogFileReader.h
src/modes/apache/: apacheLogMode.h
src/modes/authentication/: CMakeLists.txt  authenticationConfiguration.h  authenticationConfigurationWidget.h  authenticationLogMode.cpp  authenticationLogMode.h
src/modes/base/: CMakeLists.txt  fileList.cpp  fileListBase.ui  fileListHelper.cpp  multipleFileList.cpp  multipleFileList.h  multipleFileListBase.ui  syslogAnalyzer.cpp  syslogAnalyzer.h  syslogAnalyzer2.cpp  syslogAnalyzer2.h  ui_fileListBase.h
src/modes/cron/: cronAnalyzer.cpp  cronAnalyzer.h  cronConfiguration.h  cronConfigurationWidget.h  cronItemBuilder.h  cronLogMode.cpp  cronLogMode.h
src/modes/cups/: cupsConfiguration.h  cupsLogMode.h
src/modes/daemon/: daemonConfiguration.h  daemonLogMode.h
src/modes/firewall/: CMakeLists.txt  firewallConfiguration.cpp  firewallConfiguration.h  firewallConfigurationWidget.cpp  firewallConfigurationWidget.h  firewallFactory.cpp  firewallFactory.h  firewallLogMode.cpp  firewallLogMode.h
src/modes/fontconfig/: CMakeLists.txt  fontconfigConfiguration.cpp  fontconfigConfiguration.h  fontconfigConfigurationWidget.cpp  fontconfigConfigurationWidget.h  fontconfigFactory.cpp  fontconfigFactory.h  fontconfigLogMode.cpp  fontconfigLogMode.h
src/modes/formatusb/: CMakeLists.txt  formatusbAnalyzer.cpp  formatusbAnalyzer.h  formatusbConfiguration.cpp  formatusbConfiguration.h  formatusbConfigurationWidget.cpp  formatusbConfigurationWidget.h  formatusbFactory.cpp  formatusbFactory.h  formatusbLogMode.cpp  formatusbLogMode.h
src/modes/kernel/: kernelAnalyzer.h  kernelLogMode.h
src/modes/lightdm/: CMakeLists.txt  lightdmConfiguration.cpp  lightdmConfiguration.h  lightdmConfigurationWidget.cpp  lightdmConfigurationWidget.h  lightdmFactory.cpp  lightdmFactory.h  lightdmLogMode.cpp  lightdmLogMode.h
src/modes/merger/: CMakeLists.txt  mergerAnalyzer.cpp  mergerAnalyzer.h  mergerConfiguration.cpp  mergerConfiguration.h  mergerConfigurationWidget.cpp  mergerConfigurationWidget.h  mergerFactory.cpp  mergerFactory.h  mergerLogMode.cpp  mergerLogMode.h
src/modes/mx_boot_repair/: CMakeLists.txt  mx_boot_repairConfiguration.cpp  mx_boot_repairConfiguration.h  mx_boot_repairConfigurationWidget.cpp  mx_boot_repairConfigurationWidget.h  mx_boot_repairFactory.cpp  mx_boot_repairFactory.h  mx_boot_repairLogMode.cpp  mx_boot_repairLogMode.h
src/modes/mx_live_usb_maker/: CMakeLists.txt  mx_live_usb_makerConfiguration.cpp  mx_live_usb_makerConfiguration.h  mx_live_usb_makerConfigurationWidget.cpp  mx_live_usb_makerConfigurationWidget.h  mx_live_usb_makerFactory.cpp  mx_live_usb_makerFactory.h  mx_live_usb_makerLogMode.cpp  mx_live_usb_makerLogMode.h
src/modes/mx_snapshot/: CMakeLists.txt  mx_snapshotConfiguration.cpp  mx_snapshotConfiguration.h  mx_snapshotConfigurationWidget.cpp  mx_snapshotConfigurationWidget.h  mx_snapshotFactory.cpp  mx_snapshotFactory.h  mx_snapshotLogMode.cpp  mx_snapshotLogMode.h
src/modes/nvidia/: CMakeLists.txt  nvidiaConfiguration.cpp  nvidiaConfiguration.h  nvidiaConfigurationWidget.cpp  nvidiaConfigurationWidget.h  nvidiaFactory.cpp  nvidiaFactory.h  nvidiaLogMode.cpp  nvidiaLogMode.h
src/modes/open/: openLogMode.h
src/modes/postfix/: postfixAnalyzer.h  postfixConfiguration.h  postfixConfigurationWidget.h  postfixLogMode.cpp  postfixLogMode.h
src/modes/powerlogs/: CMakeLists.txt  powerlogsConfiguration.cpp  powerlogsConfiguration.h  powerlogsConfigurationWidget.cpp  powerlogsConfigurationWidget.h  powerlogsFactory.cpp  powerlogsFactory.h  powerlogsLogMode.cpp  powerlogsLogMode.h
src/modes/rkhunter/: CMakeLists.txt  rkhunterConfiguration.cpp  rkhunterConfiguration.h  rkhunterConfigurationWidget.cpp  rkhunterConfigurationWidget.h  rkhunterFactory.cpp  rkhunterFactory.h  rkhunterLogMode.cpp  rkhunterLogMode.h
src/modes/samba/: sambaLogMode.h
src/modes/system/: systemFactory.cpp  systemLogMode.cpp
src/modes/teamviewer/: CMakeLists.txt  teamviewerConfiguration.cpp  teamviewerConfiguration.h  teamviewerConfigurationWidget.cpp  teamviewerConfigurationWidget.h  teamviewerFactory.cpp  teamviewerFactory.h  teamviewerLogMode.cpp  teamviewerLogMode.h
src/modes/tiger/: CMakeLists.txt  tigerConfiguration.cpp  tigerConfiguration.h  tigerConfigurationWidget.cpp  tigerConfigurationWidget.h  tigerFactory.cpp  tigerFactory.h  tigerLogMode.cpp  tigerLogMode.h
src/modes/trim/: CMakeLists.txt  trimConfiguration.cpp  trimConfiguration.h  trimConfigurationWidget.cpp  trimConfigurationWidget.h  trimFactory.h  trimLogMode.cpp  trimLogMode.h
